force-app/main/default/objects/Bank_Account__c/fields/ABA__c.field-meta.xml
<CustomField>
    <fullName>ABA__c</fullName>
    <label>ABA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>