force-app/main/default/objects/Bank_Account__c/fields/Beneficiary_Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_Account_Type__c</fullName>
    <label>Beneficiary Bank Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Checking Account</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposit</fullName>
            </value>
            <value>
                <fullName>Money Market Account</fullName>
            </value>
            <value>
                <fullName>Individual Retirement Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>