force-app/main/default/objects/Bank_Account__c/fields/Beneficiary_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_Name__c</fullName>
    <label>Beneficiary Bank Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>