force-app/main/default/objects/Bank_Account__c/fields/Intermediary_Bank__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Bank__c</fullName>
    <label>Intermediary Bank</label>
    <length>30</length>
    <type>Text</type>
</CustomField>