force-app/main/default/objects/Bank_Account__c/fields/SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_Code__c</fullName>
    <label>SWIFT Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>