force-app/main/default/objects/Bank_Account__c/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <description>Bank Account belonging to client</description>
    <label>Client</label>
</RecordType>