force-app/main/default/objects/Bank_Account__c/recordTypes/Provider.recordType-meta.xml
<RecordType>
    <fullName>Provider</fullName>
    <active>true</active>
    <description>Bank Account belonging to provider</description>
    <label>Provider</label>
</RecordType>